Mem leaks fixes, ongoing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,5 +35,23 @@ if(READLINE_FOUND)
     target_compile_definitions(nada_lib PUBLIC HAVE_READLINE)
 endif()
 
+if(READLINE_FOUND)
+    if(PkgConfig_FOUND AND READLINE_LIBRARIES)
+        # When using pkg-config
+        target_link_libraries(nada PRIVATE ${READLINE_LIBRARIES})
+    else()
+        # When found manually
+        target_link_libraries(nada PRIVATE ${READLINE_LIBRARY})
+        if(TERMCAP_LIBRARY)
+            target_link_libraries(nada PRIVATE ${TERMCAP_LIBRARY})
+        endif()
+    endif()
+    
+    # Add include directories if needed
+    if(READLINE_INCLUDE_DIR)
+        target_include_directories(nada PRIVATE ${READLINE_INCLUDE_DIR})
+    endif()
+endif()
+
 # Install the executable
 install(TARGETS nada DESTINATION bin)
