--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,3 +60,8 @@ add_subdirectory(src)
 
 # Add the tests directory
 add_subdirectory(tests)
+
+# Install library files
+install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/nadalib/
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/nada/lib
+        FILES_MATCHING PATTERN "*.lisp")
