--- a/tests/memory_tests/leak_test.sh.in
+++ b/tests/memory_tests/leak_test.sh.in
@@ -4,6 +4,7 @@
 TEST_PROGRAM="@CMAKE_BINARY_DIR@/tests/memory_test"
 TEST_METHOD="$1"
 TEST_SCRIPTS_DIR="@CMAKE_CURRENT_SOURCE_DIR@/memory_tests/test_scripts"
+LISP_TESTS_DIR="@CMAKE_CURRENT_SOURCE_DIR@/lisp_tests"
 
 run_valgrind_test() {
     local script_file="$1"
@@ -19,17 +20,8 @@ run_leaks_test() {
     return $?
 }
 
-# Make sure the TEST_SCRIPTS_DIR exists
-if [ ! -d "$TEST_SCRIPTS_DIR" ]; then
-    mkdir -p "$TEST_SCRIPTS_DIR"
-    echo "; Basic memory test script" > "$TEST_SCRIPTS_DIR/basic.scm"
-    echo "(define a 10)" >> "$TEST_SCRIPTS_DIR/basic.scm"
-    echo "(define b 20)" >> "$TEST_SCRIPTS_DIR/basic.scm"
-    echo "(+ a b)" >> "$TEST_SCRIPTS_DIR/basic.scm"
-fi
-
-# Process each test script
-for script in "$TEST_SCRIPTS_DIR"/*.scm; do
+run_test() {
+    local script="$1"
     if [ "$TEST_METHOD" = "valgrind" ]; then
         run_valgrind_test "$script"
     elif [ "$TEST_METHOD" = "leaks" ]; then
@@ -45,7 +37,32 @@ for script in "$TEST_SCRIPTS_DIR"/*.scm; do
     else
         echo "Memory leak test passed for $script"
     fi
+}
+
+# Make sure the TEST_SCRIPTS_DIR exists
+if [ ! -d "$TEST_SCRIPTS_DIR" ]; then
+    mkdir -p "$TEST_SCRIPTS_DIR"
+    echo "; Basic memory test script" > "$TEST_SCRIPTS_DIR/basic.scm"
+    echo "(define a 10)" >> "$TEST_SCRIPTS_DIR/basic.scm"
+    echo "(define b 20)" >> "$TEST_SCRIPTS_DIR/basic.scm"
+    echo "(+ a b)" >> "$TEST_SCRIPTS_DIR/basic.scm"
+fi
+
+echo "Running tests from memory_tests/test_scripts directory..."
+# Process each test script in the test_scripts directory
+for script in "$TEST_SCRIPTS_DIR"/*.scm; do
+    run_test "$script"
 done
+
+# Check if lisp_tests directory exists and run tests there too
+if [ -d "$LISP_TESTS_DIR" ]; then
+    echo -e "\nRunning additional tests from lisp_tests directory..."
+    for script in "$LISP_TESTS_DIR"/*.scm; do
+        if [ -f "$script" ]; then  # Make sure the file exists (in case there are no .scm files)
+            run_test "$script"
+        fi
+    done
+fi
 
 echo "All memory leak tests passed!"
 exit 0
