Make testing more granular and selectable

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,40 +12,49 @@ file(GLOB LISP_TEST_FILES
 # Create lisp_tests directory in build directory
 file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lisp_tests)
 
-# Copy each test file
+# Create a utility script to run a single test file
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/run_single_test.sh.in
+    ${CMAKE_CURRENT_BINARY_DIR}/run_single_test.sh
+    @ONLY
+)
+file(CHMOD ${CMAKE_CURRENT_BINARY_DIR}/run_single_test.sh
+     PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE 
+                GROUP_READ GROUP_EXECUTE 
+                WORLD_READ WORLD_EXECUTE)
+
+# Copy each test file and register as individual test
 foreach(LISP_TEST_FILE ${LISP_TEST_FILES})
     get_filename_component(FILENAME ${LISP_TEST_FILE} NAME)
+    get_filename_component(TEST_NAME ${LISP_TEST_FILE} NAME_WE)
+    
+    # Copy the file to the build directory
     configure_file(
         ${LISP_TEST_FILE}
         ${CMAKE_CURRENT_BINARY_DIR}/lisp_tests/${FILENAME}
         COPYONLY
     )
+    
+    # Register individual test
+    add_test(
+        NAME "LispTest.${TEST_NAME}"
+        COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_single_test.sh ${CMAKE_CURRENT_BINARY_DIR}/run_lisp_tests ${LISP_TEST_FILE}
+        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+    )
+    # Set properties to categorize tests
+    set_tests_properties("LispTest.${TEST_NAME}" PROPERTIES LABELS "LispTests")
 endforeach()
 
-# Remove existing LispBasedTests definition
-if(TARGET LispBasedTests)
-  remove_test(LispBasedTests)
-endif()
-
-# Add updated test definition
-message("Adding test")
-add_test(
-  NAME LispBasedTests
-  COMMAND run_lisp_tests "${CMAKE_CURRENT_SOURCE_DIR}/lisp_tests"
-  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/tests
-)
-message("End add test")
-
-# Memory leak test
+# Add a similar approach for memory tests
 if(UNIX)
     # Create script for running memory tests
     configure_file(
-        ${CMAKE_CURRENT_SOURCE_DIR}/memory_tests/leak_test.sh.in
-        ${CMAKE_CURRENT_BINARY_DIR}/leak_test.sh
+        ${CMAKE_CURRENT_SOURCE_DIR}/memory_tests/leak_test_single.sh.in
+        ${CMAKE_CURRENT_BINARY_DIR}/leak_test_single.sh
         @ONLY
     )
     
-    file(CHMOD ${CMAKE_CURRENT_BINARY_DIR}/leak_test.sh
+    file(CHMOD ${CMAKE_CURRENT_BINARY_DIR}/leak_test_single.sh
          PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE 
                     GROUP_READ GROUP_EXECUTE 
                     WORLD_READ WORLD_EXECUTE)
@@ -53,20 +62,64 @@ if(UNIX)
     add_executable(memory_test memory_tests/leak_test.c)
     target_link_libraries(memory_test PRIVATE nada_lib)
     
-    # Add memory leak tests based on platform
-    if(APPLE)
-        add_test(
-            NAME MemoryLeakCheck
-            COMMAND ${CMAKE_CURRENT_BINARY_DIR}/leak_test.sh leaks
-        )
-    else()
-        # Linux (need to check if valgrind is available)
-        find_program(VALGRIND "valgrind")
-        if(VALGRIND)
+    # Memory leak test files
+    file(GLOB MEMORY_TEST_FILES
+        "${CMAKE_CURRENT_SOURCE_DIR}/memory_tests/test_scripts/*.scm"
+    )
+    
+    # Register each memory test individually
+    foreach(MEMORY_TEST_FILE ${MEMORY_TEST_FILES})
+        get_filename_component(FILENAME ${MEMORY_TEST_FILE} NAME)
+        get_filename_component(TEST_NAME ${MEMORY_TEST_FILE} NAME_WE)
+        
+        # Register the test based on platform
+        if(APPLE)
             add_test(
-                NAME MemoryLeakCheck
-                COMMAND ${CMAKE_CURRENT_BINARY_DIR}/leak_test.sh valgrind
+                NAME "MemoryTest.${TEST_NAME}"
+                COMMAND ${CMAKE_CURRENT_BINARY_DIR}/leak_test_single.sh leaks ${MEMORY_TEST_FILE}
+                WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+            )
+        else()
+            # Linux (need to check if valgrind is available)
+            find_program(VALGRIND "valgrind")
+            if(VALGRIND)
+                add_test(
+                    NAME "MemoryTest.${TEST_NAME}"
+                    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/leak_test_single.sh valgrind ${MEMORY_TEST_FILE}
+                    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+                )
+            endif()
+        endif()
+        
+        # Set properties for categorizing tests
+        set_tests_properties("MemoryTest.${TEST_NAME}" PROPERTIES LABELS "MemoryTests")
+    endforeach()
+endif()
+
+# Also run memory tests on regular lisp test files
+if(UNIX AND VALGRIND)
+    foreach(LISP_TEST_FILE ${LISP_TEST_FILES})
+        get_filename_component(FILENAME ${LISP_TEST_FILE} NAME)
+        get_filename_component(TEST_NAME ${LISP_TEST_FILE} NAME_WE)
+        
+        # Register memory test for each lisp test file
+        if(APPLE)
+            add_test(
+                NAME "MemoryTest.Lisp.${TEST_NAME}"
+                COMMAND ${CMAKE_CURRENT_BINARY_DIR}/leak_test_single.sh leaks ${LISP_TEST_FILE}
+                WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/tests
+            )
+        else()
+            # Linux
+            add_test(
+                NAME "MemoryTest.Lisp.${TEST_NAME}"
+                COMMAND ${CMAKE_CURRENT_BINARY_DIR}/leak_test_single.sh valgrind ${LISP_TEST_FILE}
+                WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/tests
             )
         endif()
-    endif()
+        
+        # Set properties for categorizing tests
+        set_tests_properties("MemoryTest.Lisp.${TEST_NAME}" PROPERTIES 
+                             LABELS "MemoryTests;LispMemoryTests")
+    endforeach()
 endif()
