--- a/repl/CMakeLists.txt
+++ b/repl/CMakeLists.txt
@@ -1,30 +1,30 @@
 # repl/CMakeLists.txt
 
-# Create the executable
-add_executable(nada NadaLisp.c)
-target_link_libraries(nada PRIVATE nada_lib)
+# Link against the static library
+add_executable(NadaLisp NadaLisp.c)
+target_link_libraries(NadaLisp PRIVATE nada_lib)
 
 # Add include directories for the executable
-target_include_directories(nada PRIVATE ${CMAKE_SOURCE_DIR}/lib)
+target_include_directories(NadaLisp PRIVATE ${CMAKE_SOURCE_DIR}/include)
 
 # Add readline dependency to the executable
 if(READLINE_FOUND)
     if(PkgConfig_FOUND AND READLINE_LIBRARIES)
         # When using pkg-config
-        target_link_libraries(nada PRIVATE ${READLINE_LIBRARIES})
+        target_link_libraries(NadaLisp PRIVATE ${READLINE_LIBRARIES})
     else()
         # When found manually
-        target_link_libraries(nada PRIVATE ${READLINE_LIBRARY})
+        target_link_libraries(NadaLisp PRIVATE ${READLINE_LIBRARY})
         if(TERMCAP_LIBRARY)
-            target_link_libraries(nada PRIVATE ${TERMCAP_LIBRARY})
+            target_link_libraries(NadaLisp PRIVATE ${TERMCAP_LIBRARY})
         endif()
     endif()
     
     # Add include directories if needed
     if(READLINE_INCLUDE_DIR)
-        target_include_directories(nada PRIVATE ${READLINE_INCLUDE_DIR})
+        target_include_directories(NadaLisp PRIVATE ${READLINE_INCLUDE_DIR})
     endif()
 endif()
 
 # Install the executable
-install(TARGETS nada DESTINATION bin)
+install(TARGETS NadaLisp DESTINATION bin)
