Debug GH action

--- a/.github/workflows/cmake-test.yml
+++ b/.github/workflows/cmake-test.yml
@@ -38,7 +38,21 @@ jobs:
     - name: Setup Python virtual environment and build kernel
       run: |
         cd build
+        # Print CMake variables to help debugging
+        echo "Current directory: $(pwd)"
+        echo "CMake binary dir: $(cmake -LA . | grep CMAKE_BINARY_DIR)"
+        echo "CMake current binary dir: $(cmake -LA . | grep CMAKE_CURRENT_BINARY_DIR)"
+        
+        # Attempt to build the venv target
         cmake --build . --target setup_venv
+        
+        # Debug: List files to find where venv was created
+        echo "Listing build directory contents:"
+        find . -name ".venv" -type d
+        find . -path "*/.venv/bin/python" 2>/dev/null || echo "Python executable not found in .venv/bin"
+        find . -name "python" 2>/dev/null | grep -i venv
+        
+        # Continue with other targets
         cmake --build . --target jupyter_kernel
         cmake --build . --target install_kernel
 
@@ -49,12 +63,18 @@ jobs:
 
     - name: Test Jupyter kernel separately
       working-directory: ${{github.workspace}}/build
-      # Optional: Add a simple test of the kernel to verify it loads
+      # Try multiple possible locations for the venv
       run: |
-        if [ -f .venv/bin/python ]; then
-          .venv/bin/python -c "import sys; print('Python path:', sys.path)"
-          .venv/bin/python -c "import jupyter_client; print('Kernel specs:', jupyter_client.kernelspec.find_kernel_specs())"
+        # Try to find python executable in virtual environment
+        PYTHON_EXEC=$(find . -path "*/.venv/bin/python" 2>/dev/null | head -1)
+        
+        if [ -n "$PYTHON_EXEC" ]; then
+          echo "Found Python at: $PYTHON_EXEC"
+          $PYTHON_EXEC -c "import sys; print('Python path:', sys.path)"
+          $PYTHON_EXEC -c "import jupyter_client; print('Kernel specs:', jupyter_client.kernelspec.find_kernel_specs())"
         else
-          echo "Virtual environment not found at expected location"
+          echo "Python executable not found in virtual environment"
+          echo "Listing all Python executables:"
+          find . -name "python" | grep -v "/__pycache__/"
           exit 1
         fi
