Revamped output independent of stdio, markdown output and html output for NadaLisp's jupyter kernel

--- a/nadalib/CMakeLists.txt
+++ b/nadalib/CMakeLists.txt
@@ -17,6 +17,8 @@ set(LIB_SOURCES
     NadaBuiltinPredicates.c
     NadaBuiltinBoolOps.c
     NadaBuiltinIO.c
+    NadaOutput.c
+    NadaJupyter.c
 )
 
 # Add the library target
